--- a/{{cookiecutter.project_name}}/client/src/index.css
+++ b/{{cookiecutter.project_name}}/client/src/index.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
